2008-01-05  Sancho Lerena  <slerena@artica.es>

	*  operation/inventories/inventory_detail.php
	operation/companies/company_detail.php
	godmode/setup/event.php: Solved small problems because several
	typos.

2009-01-04  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/ru.mo, include/languages/ru.mo: Added Russian
	  translation.

	* include/languages/index.pot: Updated po template.

	* integria_dbdata.sql: Added Russian to translations.

	* operation/incidents/incident.php: Added a space to a php echo
	  string.

	* operation/incidents/incident.php: Added a semicolon to the end of
	  a php string.

2008-12-26  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/es.po, include/languages/es.mo: Updated Spanish
	  translation

	* include/languages/index.pot: Updated po template.

	* operation/side_menu.php, operation/contacts/contact_detail.php,
	  operation/companies/company_role.php,
	  operation/companies/company_detail.php,
	  godmode/usuarios/lista_usuarios.php: Improved i18n infrastructure.

2008-12-23  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/es.mo, include/languages/es.po: Updated Spanish
	  translation

	* include/languages/index.pot: Updated po template.

2008-12-22  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/nl.mo, include/languages/nl.po: Added Dutch
	  translation. Thanks to Rosetta users.

	* include/languages/index.pot: Updated po template.

	* include/languages/Makefile: Added Dutch to translation
	  infrastructure.

2008-12-20  Sancho Lerena  <slerena@artica.es>

	* functions_db.php: Added taskname to workunit mail report.

	* functions_form.php: Fixed problem showing current user in 
	Combo_user_visible_for_me.

	* operation/user_report/report_full_graph.php: Removed fullscreen 
	link and better date checking.

2008-12-17  Sancho Lerena  <slerena@artica.es>

	* include/functions_form.php
	operation/side_menu.php
	operation/projects/project.php
	operation/projects/task_detail.php